# soc-dashboard

./: README.md  pyproject.toml
src/soc_dashboard/: __init__.py  __main__.py  config.py  exporter.py  main.py  models.py
src/soc_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/soc_dashboard/engine/: __init__.py  alert_manager.py  analytics.py  detection_engine.py  event_engine.py  ioc_db.py  log_parser.py  network_monitor.py  process_monitor.py  threat_intel.py
src/soc_dashboard/plugins/: __init__.py  base.py
src/soc_dashboard/ui/: __init__.py  app.py
tests/: test_detection_engine.py  test_exporter.py
