[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-dashboard"
version = "0.1.0"
description = "ASCII Threat Intelligence and SOC dashboard for terminal environments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SOC Dashboard" }]
dependencies = [
  "textual>=0.72.0",
  "rich>=13.7.0",
  "psutil>=6.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
soc-dashboard = "soc_dashboard.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
